test/fixtures/diagnostics/type-checker/negative/enum-value-bitwise-and-invalid/input.tysh
namespace Samples.TypeChecker.EnumValueBitwiseAndInvalid

enum Permission {
  Read,
  Write
}

enum Color {
  Red,
  Blue
}

let mixedEnum: Permission = Permission.Read & Color.Red

let enumAndNumber: Permission = Permission.Read & 1
